--- a/static/index.html
+++ b/static/index.html
@@ -15,6 +15,7 @@
 
     <script src='/dist/main.js' defer></script>
     <link rel='stylesheet' href='/static/styles.css' />
+    <link rel="icon" type="image/x-icon" href="/static/favicon/favicon.ico">
   </head>
   <body>
     <div id='root'></div>
